# endless-sky

./: CMakeLists.txt  CMakePresets.json
source/: AI.cpp  AI.h  Account.cpp  AlertLabel.cpp  AmmoDisplay.cpp  AsteroidField.cpp  BoardingPanel.cpp  BoardingPanel.h  Body.cpp  Body.h  CMakeLists.txt  Camera.cpp  CaptureOdds.cpp  CollisionSet.cpp  Command.cpp  Conversation.cpp  ConversationPanel.cpp  DataFile.cpp  Date.cpp  Depreciation.cpp  DistanceMap.cpp  Effect.h  Engine.cpp  Engine.h  EsUuid.cpp  EscortDisplay.cpp  Fleet.cpp  FleetCargo.cpp  Flotsam.cpp  GameAction.cpp  GameAction.h  GameData.cpp  GameLoadingPanel.cpp  Government.cpp  Government.h  HailPanel.cpp  Hazard.h  HiringPanel.cpp  LocationFilter.cpp  MainPanel.cpp  (+56 more)
source/audio/: Music.cpp  Sound.cpp
source/broker/: Broker.cpp  Broker.h  BrokerMessage.h  Message.h  Publisher.h  Subscriber.h
source/comparators/: BySeriesAndIndex.h
source/image/: ImageFileData.cpp  ImageSet.cpp  Sprite.cpp
source/net/: Broker.cpp  Broker.h  Publisher.h  Subscriber.h
source/ship/: Armament.cpp  Bay.cpp  Bay.h  CaptureOdds.cpp  CargoHold.cpp  Crew.cpp  Crew.h  DamageDealt.h  DamageProfile.cpp  DamageProfile.h  EnginePoint.h  FighterHitHelper.h  FireCommand.h  Fleet.cpp  Fleet.h  FleetCargo.cpp  FleetCargo.h  FormationPattern.cpp  FormationPattern.h  FormationPositioner.cpp  FormationPositioner.h  Hardpoint.cpp  Hardpoint.h  Outfit.cpp  Outfit.h  Ship.cpp  Ship.h  ShipAICache.cpp  ShipJumpNavigation.cpp  ShipManager.cpp  Variant.cpp  Weapon.cpp  Weapon.h
source/test/: Test.cpp
source/text/: Format.h
source/ui/: ClickZone.h  Dialog.cpp  Dialog.h  Galaxy.cpp  Galaxy.h  GameWindow.cpp  InfoPanelState.cpp  Information.h  Interface.cpp  Interface.h  MapPlanetCard.cpp  MapPlanetCard.h  MiniMap.cpp  MiniMap.h  Preferences.cpp  RenderBuffer.cpp  RenderBuffer.h  Screen.h  ScrollBar.h  ScrollVar.h  TextArea.cpp  TextArea.h  UI.cpp  UI.h
source/ui/display/: AmmoDisplay.cpp  AmmoDisplay.h  EscortDisplay.cpp  EscortDisplay.h  ItemInfoDisplay.cpp  ItemInfoDisplay.h  OutfitInfoDisplay.cpp  ShipInfoDisplay.cpp
source/ui/label/: AlertLabel.cpp  AlertLabel.h  PlanetLabel.cpp  PlanetLabel.h
source/ui/panel/: BankPanel.cpp  BoardingPanel.cpp  BoardingPanel.h  ConversationPanel.cpp  ConversationPanel.h  GameLoadingPanel.cpp  HailPanel.cpp  HailPanel.h  HiringPanel.cpp  LoadPanel.cpp  LoadPanel.h  LogbookPanel.cpp  MainPanel.cpp  MainPanel.h  MapDetailPanel.cpp  MapDetailPanel.h  MapOutfitterPanel.cpp  MapOutfitterPanel.h  MapPanel.cpp  MapPanel.h  MapSalesPanel.cpp  MapSalesPanel.h  MapShipyardPanel.cpp  MapShipyardPanel.h  MenuAnimationPanel.cpp  MenuPanel.cpp  MessageLogPanel.cpp  MessageLogPanel.h  MissionPanel.cpp  OutfitterPanel.cpp  OutfitterPanel.h  Panel.cpp  Panel.h  PlanetPanel.cpp  PlanetPanel.h  PlayerInfoPanel.cpp  PlayerInfoPanel.h  PreferencesPanel.cpp  PreferencesPanel.h  ShipInfoPanel.cpp  (+12 more)
source/ui/shader/: BatchDrawList.cpp  BatchDrawList.h  BatchShader.cpp  DrawList.cpp  DrawList.h  FillShader.cpp  FogShader.cpp  LineShader.cpp  OutlineShader.cpp  OutlineShader.h  PointerShader.cpp  RingShader.cpp  Shader.cpp  SpriteShader.cpp  SpriteShader.h  StarField.cpp  StarField.h
source/ui/text/: Font.cpp  Table.cpp  Table.h  WrappedText.h
tests/: CMakeLists.txt
tests/unit/src/: test_datafile.cpp  test_firecommand.cpp  test_formationPattern.cpp  test_ship.cpp
tests/unit/src/text/: test_alignment.cpp  test_displaytext.cpp  test_format.cpp  test_layout.cpp  test_truncate.cpp
