add_library(EndlessSkyLib OBJECT)

# Set the appropriate compiler flags.
target_include_directories(EndlessSkyLib PUBLIC "${LIBMAD_INCLUDE_DIR}")
if(MSVC)
	target_compile_options(EndlessSkyLib PUBLIC "/W3" "/permissive-" "/sdl" "/GR-" "/analyze-"
		"-Wno-nonportable-include-path" "$<$<CONFIG:Release>:/Gy;/Oi>")
	target_compile_definitions(EndlessSkyLib PUBLIC "_UNICODE" "UNICODE")
else()
	target_compile_options(EndlessSkyLib PUBLIC
		"-Wall" "-pedantic-errors" "-Wold-style-cast" "$<$<CONFIG:Release>:-fno-rtti>")
endif()

# Every source file (and header file) should be listed here, except main.cpp.
# If you add a new file, add it to this list.
target_sources(EndlessSkyLib PRIVATE
	Account.cpp
	Account.h
	AI.cpp
	AI.h
	"ui/label/AlertLabel.cpp"
	"ui/label/AlertLabel.h"
	"ui/display/AmmoDisplay.cpp"
	"ui/display/AmmoDisplay.h"
	Angle.cpp
	Angle.h
	Animate.h
	"ship/Armament.cpp"
	"ship/Armament.h"
	AsteroidField.cpp
	AsteroidField.h
	"ui/panel/BankPanel.cpp"
	"ui/panel/BankPanel.h"
	"ship/Bay.cpp"
	"ship/Bay.h"
	Bitset.cpp
	Bitset.h
	"ui/panel/BoardingPanel.cpp"
	"ui/panel/BoardingPanel.h"
	Body.cpp
	Body.h
	Camera.cpp
	Camera.h
	"ship/CaptureOdds.cpp"
	"ship/CaptureOdds.h"
	"ship/CargoHold.cpp"
	"ship/CargoHold.h"
	CategoryList.cpp
	CategoryList.h
	CategoryType.h
	"ui/ClickZone.h"
	Collision.cpp
	Collision.h
	CollisionSet.cpp
	CollisionSet.h
	CollisionType.h
	"ui/Color.cpp"
	"ui/Color.h"
	Command.cpp
	Command.h
	ConditionAssignments.cpp
	ConditionAssignments.h
	ConditionEntry.cpp
	ConditionEntry.h
	ConditionSet.cpp
	ConditionSet.h
	ConditionsStore.cpp
	ConditionsStore.h
	Conversation.cpp
	Conversation.h
	"ui/panel/ConversationPanel.cpp"
	"ui/panel/ConversationPanel.h"
	CoreStartData.cpp
	CoreStartData.h
	"ship/DamageDealt.h"
	"ship/DamageProfile.cpp"
	"ship/DamageProfile.h"
	DataFile.cpp
	DataFile.h
	DataNode.cpp
	DataNode.h
	DataWriter.cpp
	DataWriter.h
	Date.cpp
	Date.h
	Depreciation.cpp
	Depreciation.h
	"ui/Dialog.cpp"
	"ui/Dialog.h"
	Dictionary.cpp
	Dictionary.h
	DistanceCalculationSettings.h
	DistanceCalculationSettings.cpp
	DistanceMap.cpp
	DistanceMap.h
	Distribution.cpp
	Distribution.h
	Effect.cpp
	Effect.h
	Engine.cpp
	Engine.h
	EsUuid.cpp
	EsUuid.h
	"ui/display/EscortDisplay.cpp"
	"ui/display/EscortDisplay.h"
	ExclusiveItem.h
	"ship/FighterHitHelper.h"
	Files.cpp
	Files.h
	"ship/FireCommand.cpp"
	"ship/FireCommand.h"
	"ship/Fleet.cpp"
	"ship/Fleet.h"
	"ship/FleetCargo.cpp"
	"ship/FleetCargo.h"
	Flotsam.cpp
	Flotsam.h
	"ship/FormationPattern.cpp"
	"ship/FormationPattern.h"
	"ship/FormationPositioner.cpp"
	"ship/FormationPositioner.h"
	FrameTimer.cpp
	FrameTimer.h
	"ui/Galaxy.cpp"
	"ui/Galaxy.h"
	GameAction.cpp
	GameAction.h
	GameData.cpp
	GameData.h
	GameEvent.cpp
	GameEvent.h
	"ui/panel/GameLoadingPanel.cpp"
	"ui/panel/GameLoadingPanel.h"
	Gamerules.cpp
	Gamerules.h
	"ui/GameWindow.cpp"
	"ui/GameWindow.h"
	Government.cpp
	Government.h
	"ui/panel/HailPanel.cpp"
	"ui/panel/HailPanel.h"
	"ship/Hardpoint.cpp"
	"ship/Hardpoint.h"
	Hazard.cpp
	Hazard.h
	"ui/panel/HiringPanel.cpp"
	"ui/panel/HiringPanel.h"
	"ui/InfoPanelState.cpp"
	"ui/InfoPanelState.h"
	"ui/Information.cpp"
	"ui/Information.h"
	"ui/Interface.cpp"
	"ui/Interface.h"
	"ui/display/ItemInfoDisplay.cpp"
	"ui/display/ItemInfoDisplay.h"
	"ship/JumpType.h"
	"ui/panel/LoadPanel.cpp"
	"ui/panel/LoadPanel.h"
	LocationFilter.cpp
	LocationFilter.h
	"ui/panel/LogbookPanel.cpp"
	"ui/panel/LogbookPanel.h"
	Logger.cpp
	Logger.h
	"ui/panel/MainPanel.cpp"
	"ui/panel/MainPanel.h"
	"ui/panel/MapDetailPanel.cpp"
	"ui/panel/MapDetailPanel.h"
	"ui/panel/MapOutfitterPanel.cpp"
	"ui/panel/MapOutfitterPanel.h"
	"ui/panel/MapPanel.cpp"
	"ui/panel/MapPanel.h"
	"ui/MapPlanetCard.cpp"
	"ui/MapPlanetCard.h"
	"ui/panel/MapSalesPanel.cpp"
	"ui/panel/MapSalesPanel.h"
	"ui/panel/MapShipyardPanel.cpp"
	"ui/panel/MapShipyardPanel.h"
	"ui/panel/MenuAnimationPanel.cpp"
	"ui/panel/MenuAnimationPanel.h"
	"ui/panel/MenuPanel.cpp"
	"ui/panel/MenuPanel.h"
	"ui/panel/MessageLogPanel.cpp"
	"ui/panel/MessageLogPanel.h"
	"broker/Message.h"
	Messages.cpp
	Messages.h
	Minable.cpp
	Minable.h
	MinableDamageDealt.h
	"ui/MiniMap.cpp"
	"ui/MiniMap.h"
	Mission.cpp
	Mission.h
	MissionAction.cpp
	MissionAction.h
	"ui/panel/MissionPanel.cpp"
	"ui/panel/MissionPanel.h"
	Mortgage.cpp
	Mortgage.h
	News.cpp
	News.h
	NPC.cpp
	NPC.h
	NPCAction.cpp
	NPCAction.h
	"ship/Outfit.cpp"
	"ship/Outfit.h"
	"ui/display/OutfitInfoDisplay.cpp"
	"ui/display/OutfitInfoDisplay.h"
	"ui/panel/OutfitterPanel.cpp"
	"ui/panel/OutfitterPanel.h"
	"ui/panel/Panel.cpp"
	"ui/panel/Panel.h"
	Paragraphs.cpp
	Paragraphs.h
	Person.cpp
	Person.h
	Personality.cpp
	Personality.h
	Phrase.cpp
	Phrase.h
	pi.h
	Planet.cpp
	Planet.h
	"ui/label/PlanetLabel.cpp"
	"ui/label/PlanetLabel.h"
	"ui/panel/PlanetPanel.cpp"
	"ui/panel/PlanetPanel.h"
	PlayerInfo.cpp
	PlayerInfo.h
	"ui/panel/PlayerInfoPanel.cpp"
	"ui/panel/PlayerInfoPanel.h"
	Plugins.cpp
	Plugins.h
	Point.cpp
	Point.h
	Politics.cpp
	Politics.h
	Port.cpp
	Port.h
	"ui/Preferences.cpp"
	"ui/Preferences.h"
	"ui/panel/PreferencesPanel.cpp"
	"ui/panel/PreferencesPanel.h"
	PrintData.cpp
	PrintData.h
	Projectile.cpp
	Projectile.h
	Radar.cpp
	Radar.h
	RaidFleet.cpp
	RaidFleet.h
	Random.cpp
	Random.h
	RandomEvent.h
	Rectangle.cpp
	Rectangle.h
	"ui/RenderBuffer.cpp"
	"ui/RenderBuffer.h"
	RouteEdge.cpp
	RouteEdge.h
	RoutePlan.cpp
	RoutePlan.h
	Sale.h
	SavedGame.cpp
	SavedGame.h
	"ui/Screen.cpp"
	"ui/Screen.h"
	"ui/ScrollBar.cpp"
	"ui/ScrollBar.h"
	"ui/ScrollVar.h"
	Set.h
	shift.h
	"ship/Ship.cpp"
	"ship/Ship.h"
	Shop.h
	"ship/ShipEvent.cpp"
	"ship/ShipEvent.h"
	"ui/display/ShipInfoDisplay.cpp"
	"ui/display/ShipInfoDisplay.h"
	"ui/panel/ShipInfoPanel.cpp"
	"ui/panel/ShipInfoPanel.h"
	"ship/ShipJumpNavigation.cpp"
	"ship/ShipJumpNavigation.h"
	"ship/ShipManager.cpp"
	"ship/ShipManager.h"
	"ui/panel/ShipNameDialog.cpp"
	"ui/panel/ShipNameDialog.h"
	"ui/panel/ShipyardPanel.cpp"
	"ui/panel/ShipyardPanel.h"
	"ui/panel/ShopPanel.cpp"
	"ui/panel/ShopPanel.h"
	"ui/panel/SpaceportPanel.cpp"
	"ui/panel/SpaceportPanel.h"
	StartConditions.cpp
	StartConditions.h
	"ui/panel/StartConditionsPanel.cpp"
	"ui/panel/StartConditionsPanel.h"
	StellarObject.cpp
	StellarObject.h
	StringInterner.cpp
	StringInterner.h
	Swizzle.cpp
	Swizzle.h
	System.cpp
	System.h
	SystemEntry.h
	TaskQueue.cpp
	TaskQueue.h
	"ui/TextArea.cpp"
	"ui/TextArea.h"
	TextReplacements.cpp
	TextReplacements.h
	Trade.cpp
	Trade.h
	"ui/panel/TradingPanel.cpp"
	"ui/panel/TradingPanel.h"
	"ui/UI.cpp"
	"ui/UI.h"
	UniverseObjects.cpp
	UniverseObjects.h
	"ship/Variant.cpp"
	"ship/Variant.h"
	Visual.cpp
	Visual.h
	"ship/Weapon.cpp"
	"ship/Weapon.h"
	Weather.cpp
	Weather.h
	WeightedList.h
	Wormhole.cpp
	Wormhole.h
	WormholeStrategy.h
	ZipFile.cpp
	ZipFile.h
	"ui/opengl.cpp"
	"ui/opengl.h"
	pi.h
	shift.h
	audio/Audio.cpp
	audio/Audio.h
	audio/Music.cpp
	audio/Music.h
	audio/Sound.cpp
	audio/Sound.h
	audio/SoundCategory.h
	comparators/ByGivenOrder.h
	comparators/ByName.h
	comparators/BySeriesAndIndex.h
	image/BlendingMode.h
	image/ImageBuffer.cpp
	image/ImageBuffer.h
	image/ImageFileData.cpp
	image/ImageFileData.h
	image/ImageSet.cpp
	image/ImageSet.h
	image/Mask.cpp
	image/Mask.h
	image/MaskManager.cpp
	image/MaskManager.h
	image/Sprite.cpp
	image/Sprite.h
	image/SpriteSet.cpp
	image/SpriteSet.h
	ui/shader/BatchDrawList.cpp
	ui/shader/BatchDrawList.h
	ui/shader/BatchShader.cpp
	ui/shader/BatchShader.h
	ui/shader/DrawList.cpp
	ui/shader/DrawList.h
	ui/shader/FillShader.cpp
	ui/shader/FillShader.h
	ui/shader/FogShader.cpp
	ui/shader/FogShader.h
	ui/shader/LineShader.cpp
	ui/shader/LineShader.h
	ui/shader/OutlineShader.cpp
	ui/shader/OutlineShader.h
	ui/shader/PointerShader.cpp
	ui/shader/PointerShader.h
	ui/shader/RingShader.cpp
	ui/shader/RingShader.h
	ui/shader/Shader.cpp
	ui/shader/Shader.h
	ui/shader/SpriteShader.cpp
	ui/shader/SpriteShader.h
	ui/shader/StarField.cpp
	ui/shader/StarField.h
	ship/ShipAICache.cpp
	ship/ShipAICache.h
	test/Test.cpp
	test/Test.h
	test/TestContext.cpp
	test/TestContext.h
	test/TestData.cpp
	test/TestData.h
	ui/text/Alignment.h
	ui/text/Clipboard.cpp
	ui/text/Clipboard.h
	ui/text/DisplayText.cpp
	ui/text/DisplayText.h
	ui/text/Font.cpp
	ui/text/Font.h
	ui/text/FontSet.cpp
	ui/text/FontSet.h
	ui/text/Format.cpp
	ui/text/Format.h
	ui/text/Layout.h
	ui/text/Table.cpp
	ui/text/Table.h
	ui/text/Truncate.h
	ui/text/Utf8.cpp
	ui/text/Utf8.h
	ui/text/WrappedText.cpp
	ui/text/WrappedText.h
)
